<resources>
    <string name="app_name">Intents</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Handling Intents</string>
    <string name="second_fragment_label">Launch Action</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="exit">Exit</string>
    <string name="launch_action">Launch action</string>
    <string name="launch_app">Launch app</string>
    <string name="pick_image">Pick image</string>
    <string name="dial_phone_number">Dial phone number</string>
    <string name="call_phone_number">Call phone number</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="other_examples">Other examples</string>
    <string name="parameter">Parameter</string>
    <string name="enter_your_parameter">Enter your parameter</string>
</resources>